# linux-config

./: .gitignore  .gitmodules  Makefile  README.md  env_vars  ruff.toml  vimrc
alacritty/: alacritty.yml
bash/: README.md  bash.sh  mylibrary.sh  prompt.sh
console/: hook.sh
desktop/: Xresources  alacritty.yml  dunstrc  dunstrc.conf  feh.desktop  i3.conf  i3status.conf  i3status_wrapper.py  kitty.conf  osu.desktop  pam_environment  picom.conf  ranger.conf  ranger_preview.sh  rifle.conf  sway.conf  swaylock.conf  xprofile  zshenv
environment/: bkp_tool.sh  environment
fish/: aurupdate.fish  config.fish  sway.fish
ftplugin/: html.vim  python.vim
git/: global.gitignore
lint/: jshint.json  pylint
linters/: jshint.json
mpv/: input.conf  install_plugins.sh  mpv.conf  uosc.conf
neovim/: ginit.vim  init.vim
nnn/: mimeapps.list  update.sh
nvim/: ale  init.vim  nmake
pipewire/: pipewire-init.sh
rust/: install.fish
scripts/: backlight.sh  bkp_tool.sh  countdown.sh  gamemode.sh  nsxiv.sh  openweather_i3.py  screenshot.sh  sxiv-image-info.sh  sys_config.sh  wallpaper.py  wallpaper.sh
system/: cursor.theme  env_vars  environment  greetd_conf.toml  misc.fish  openweather.service  openweather.timer  wallpaper.timer
taskwarrior/: fellow-hook.sh
tmux/: tmux.conf  tmux.remote.conf
tools/zellij/base_files/python/: pyproject.toml
tools/zellij/base_files/python/.zellij/: 2-install  2-install.py  3-uninstall  3-uninstall.py
tools/zellij/base_files/python/src/: main.py
utilities/: bkptool.sh  ffmeta.py  ffmeta_test.py  screenshot.sh  system.sh  (+2 more)
(+316 files in other folders)
